# scanocr

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: binary.yml  client.yml  server.yml
client/: app.go  capture.go  config.example.toml  config.go  go.mod  main.go  main_test.go  runtime.go  upload.go  version.go
client/scripts/: build.sh  test.sh  version.sh
native/: ScanOCRNativeHelper.swift
packaging/: entrypoint.py
scanocr_server/: __init__.py  app.py  cli.py  config.py  db.py  multipart.py  state.py
scanocr_server/web/: index.html
scripts/: build-binary.sh  build.sh  test.sh
server/: pyproject.toml  setup.py
server/scanocr_server/: __init__.py  app.py  cli.py  engines.py  png.py
server/scanocr_server/web/: index.html
server/scripts/: build-binary.sh  build.sh  version.sh
server/tests/: integration_test.py
tests/: integration_test.py
